# gitice

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  flake.nix  rust-toolchain.toml  shell.nix
.github/: renovate.json
.github/workflows/: check.yml  release.yml
src/: cli.rs  git.rs  logging.rs  main.rs  model.rs
wix/: main.wxs
