[package]
name = "gitice"
version = "2.0.2"
authors = [
  "Harsh Shandilya <me@msfjarvis.dev>",
  "Amogh Lele <amolele@gmail.com>",
]
edition = "2021"
description = "Freeze your local git repositories for easy restoration"
repository = "https://github.com/msfjarvis/gitice"
homepage = "https://github.com/msfjarvis/gitice"
license = "MIT/Apache-2.0"
keywords = ["git", "snapshot", "backup", "restore"]
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["color", "deprecated", "derive"] }
gix = "0.48.0"
serde = { version = "1.0.169", default-features = false }
serde_derive = "1.0.169"
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"

[badges]
maintenance = { status = "actively-developed" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.6"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "nightly-2023-06-10"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
