[package]
name = "gitice"
version = "2.0.7"
authors = [
  "Harsh Shandilya <me@msfjarvis.dev>",
  "Amogh Lele <amolele@gmail.com>",
]
edition = "2021"
description = "Freeze your local git repositories for easy restoration"
repository = "https://github.com/msfjarvis/gitice"
homepage = "https://github.com/msfjarvis/gitice"
license = "MIT/Apache-2.0"
keywords = ["git", "snapshot", "backup", "restore"]
readme = "README.md"
include = ["src/**/*", "/LICENSE-*", "/README.md"]

[package.metadata.wix]
upgrade-guid = "90907703-6CAD-4F13-AB11-D03BF51966EC"
path-guid = "2995A4B3-1534-48CC-9D44-62713E5411B2"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["color", "deprecated", "derive"] }
gix = { version = "0.67.0", default-features = false , features = ["worktree-mutation", "blocking-network-client"] }
serde = { version = "1.0.200", default-features = false }
serde_derive = "1.0.200"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"

[badges]
maintenance = { status = "actively-developed" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# A GitHub repo to push Homebrew formulas to
tap = "msfjarvis/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
